--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,49 @@
-plugins {
-    id 'org.jetbrains.kotlin.jvm' version "1.9.21"
-    id 'org.jetbrains.kotlin.plugin.serialization' version "1.9.21"
+allprojects {
+    version = "1.0-SNAPSHOT"
+    group = "pw.mihou.simple-khttp"
 }
 
-group = "pw.mihou"
-version = "1.0-SNAPSHOT"
-
-repositories {
-    mavenCentral()
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.21"
+    }
 }
 
-dependencies {
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.6.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.2"
-    testImplementation 'org.jetbrains.kotlin:kotlin-test'
-}
+subprojects {
+    apply plugin: 'org.jetbrains.kotlin.jvm'
+    apply plugin: 'maven-publish'
 
-tasks.test {
-    useJUnitPlatform()
-}
+    publishing {
+        publications {
+            maven(MavenPublication) {
+                groupId project.group
+                artifactId project.name
+                version project.version
+                from components.java
+            }
+        }
+    }
 
-kotlin {
-    jvmToolchain(11)
+    kotlin {
+        jvmToolchain(11)
+    }
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.6.4"
+        testImplementation 'org.jetbrains.kotlin:kotlin-test'
+    }
+
+    tasks.test {
+        useJUnitPlatform()
+    }
 }
